# pdf-parsing

./: .gitignore  README.md  parse-pdf.ipynb  pyproject.toml
data/output/: output.md
