[tool.poetry]
name = "db-pdf-parsing"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
llama-index-llms-bedrock = "^0.1.8"
llama-index = "^0.10.38"
ipykernel = "^6.29.4"
boto3 = "^1.34.112"
unstructured = {extras = ["all-docs"], version = "^0.14.2"}
nltk = "^3.8.1"
llama-index-llms-ollama = "^0.1.5"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-vector-stores-chroma = "^0.1.8"
ipywidgets = "^8.1.2"
chromadb = "^0.5.0"
llama-index-readers-file = "^0.1.23"
llama-index-vector-stores-postgres = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
